fixed wrapping issues

--- a/src/pages/career/career.scss
+++ b/src/pages/career/career.scss
@@ -2,7 +2,7 @@
 
 .career-root {
   height: 100vh;
-  max-width: 100%;
+  width: 100%;
   padding-top: 68px;
 
   .container {
@@ -12,7 +12,6 @@
       margin: 20px 0;
       font-size: 1.4em;
       font-weight: 800;
-      word-wrap: break-word;
       animation: fadeInFromTop $animation-duration 100ms both;
     }
 
@@ -20,14 +19,12 @@
       margin: 20px 0;
       font-weight: 300;
       font-size: 1.4em;
-      width: 100%;
       animation: fadeInFromTop $animation-duration 300ms both;
     }
 
     .job-requirements {
       font-size: 1em;
       margin: 20px 0;
-      width: 100%;
       line-height: 2em;
       animation: fadeInFromTop $animation-duration 500ms both;
 
